--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,21 @@
 		display: block;
 	}
 
+	.documentbox {
+		position: relative;
+		width: 100%;
+		height: 0;
+		padding-bottom: 141%;
+	}
+	
+	.documentbox iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
 	.videobox {
 		position: relative;
 		width: 100%;
