--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,14 +23,14 @@
 		display: block;
 	}
 
-	.documentbox {
+	.document {
 		position: relative;
 		width: 100%;
 		height: 0;
 		padding-bottom: 141%;
 	}
 	
-	.documentbox iframe {
+	.document iframe {
 		position: absolute;
 		top: 0;
 		left: 0;
